--- a/SAMPLE-3/package.json
+++ b/SAMPLE-3/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "NODE_ENV=development webpack-dev-server",
+    "build": "NODE_ENV=production webpack -p"
   },
   "author": "",
   "license": "ISC",
